--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Run TailwindCSS
+        run: npx tailwindcss -i ./src/main.css -o ./dist/output.css --watch
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
