--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Run TailwindCSS
-        run: npx tailwindcss -i ./src/main.css -o ./dist/output.css --watch
+        run: npx tailwindcss -i ./src/main.css -o ./dist/output.css
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
