--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gh-pages": "^5.0.0",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
